some small wording changes